asignacion de estilos mediante tailwindcss

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "start": "node index.js",
-    "server": "nodemon index.js"
+    "server": "nodemon index.js",
+    "css": "postcss public/css/tailwind.css -o public/css/app.css --watch"
   },
   "repository": {
     "type": "git",
@@ -30,6 +31,9 @@
     "pug": "^3.0.3"
   },
   "devDependencies": {
-    "nodemon": "^3.1.4"
+    "autoprefixer": "^10.4.20",
+    "nodemon": "^3.1.4",
+    "postcss-cli": "^11.0.0",
+    "tailwindcss": "^3.4.10"
   }
 }
