--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
   "homepage": "https://github.com/nidianlasso/bienes_raices#readme",
   "dependencies": {
     "express": "^4.19.2",
-    "pug": "^3.0.3"
+    "mysql2": "^3.11.0",
+    "pug": "^3.0.3",
+    "sequelize": "^6.37.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
