--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
   },
   "homepage": "https://github.com/nidianlasso/bienes_raices#readme",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-validator": "^7.2.0",
     "mysql2": "^3.11.0",
     "pug": "^3.0.3",
     "sequelize": "^6.37.3"
